<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_dialog_map"
            android:text="@string/tab1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_dialog_email"
            android:text="@string/tab2" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_input_get"
            android:text="@string/tab3" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTabDotBadgeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tab_dot_badge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/increaseTabBadgeCountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/increase_tab_badge_count" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/removeAllTabBadgesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_all_tab_badges" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBottomNavDotBadgeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_bottom_nav_dot_badge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/increaseBottomNavBadgeCountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/increase_bottom_nav_badge_count" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/removeAllBottomNavBadgesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_all_bottom_nav_badges" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>